workloads/keycloak/overlays/flink-demo-rbac-mtls/ingress-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.flink-demo-rbac-mtls.confluentdemo.local`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    secretName: keycloak-tls
